<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>smash</groupId>
	<artifactId>kawkab</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Kawkab Distributed Filesystem</name>
	<url>https://github.com/smash-bi/kawkab</url>

	  <properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <nodeID>0</nodeID>
		<mainClass>kawkab.fs.cli.CLI</mainClass>
	  </properties>

	<build>
		<extensions>
		    <extension>
		      <!-- for gRPC -->
		      <groupId>kr.motd.maven</groupId>
		      <artifactId>os-maven-plugin</artifactId>
		      <version>1.5.0.Final</version>
		    </extension>
		  </extensions>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>main</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<minimizeJar>false</minimizeJar>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>kawkab.fs.Main</mainClass>
								</transformer>
							</transformers>
							<finalName>main</finalName>
							<shadeTestJar>true</shadeTestJar>
						</configuration>
					</execution>
					<execution>
						<id>cli</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<minimizeJar>false</minimizeJar>
							<transformers>
								<transformer
										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>kawkab.fs.cli.CLI</mainClass>
								</transformer>
							</transformers>
							<finalName>cli</finalName>
							<shadeTestJar>true</shadeTestJar>
						</configuration>
					</execution>
					<execution>
						<id>appendTest</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<minimizeJar>false</minimizeJar>
							<transformers>
								<transformer
										implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
									<file>kawkab.fs.tests.AppendTest</file>
								</transformer>
								<transformer
										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>kawkab.fs.tests.AppendTest</mainClass>
								</transformer>
							</transformers>
							<finalName>appendTest</finalName>
							<shadeTestJar>true</shadeTestJar>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
		          <execution>
		            <goals>
		              <goal>exec</goal>
		            </goals>
		          </execution>
		        </executions>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-ea</argument>
						<argument>-Xmn4g</argument>
						<argument>-Xmx13g</argument>
						<argument>-XX:MaxDirectMemorySize=12g</argument>

<!--						<argument>-XX:+PrintGCDetails</argument>-->
<!--						<argument>-XX:+PrintGCTimeStamps</argument>-->
<!--						<argument>-XX:+PrintGCDateStamps</argument>-->
<!--						<argument>-XX:+PrintTenuringDistribution</argument>-->
<!--						<argument>-XX:+PrintGCApplicationStoppedTime</argument>-->

<!--						<argument>-XX:CMSInitiatingOccupancyFraction=92</argument>-->
<!--						<argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>-->

<!--						<argument>-XX:+UseConcMarkSweepGC</argument>-->
<!--						<argument>-XX:+UseSerialGC</argument>-->
<!--						<argument>-XX:+UseParallelGC</argument>-->
<!--						<argument>-XX:ParallelCMSThreads=2</argument>-->
<!--						<argument>-XX:ParallelCMSThreads=4</argument>-->
<!--						<argument>-XX:+UseG1GC</argument>-->

						<argument>-DnodeID=${nodeID}</argument>
						<argument>-classpath</argument>
						<classpath/>
						<argument>${mainClass}</argument>
					</arguments>
					<addResourcesToClasspath>true</addResourcesToClasspath>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<excludes>
				      <exclude>**/thrift/*.java</exclude>
				    </excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<enableAssertions>true</enableAssertions>
					<argLine>-Xmx15g</argLine>
					<!--argLine>-XX:+UseG1GC -XX:MaxGCPauseMillis=10 -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4</argLine-->
					<!--argLine>-agentpath:/home/sm3rizvi/packages/YourKit-JavaProfiler-2019.1/bin/linux-x86-64/libyjpagent.so</argLine-->
					<!-- argLine>-Xcomp</argLine -->
					<!--argLine>-verbose:gc</argLine -->
					<systemPropertyVariables>
						<propertyName>nodeID</propertyName>
						<buildDirectory>${0}</buildDirectory>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<plugin>
			  <!-- for gRPC -->
		      <groupId>org.xolstice.maven.plugins</groupId>
		      <artifactId>protobuf-maven-plugin</artifactId>
		      <version>0.5.1</version>
		      <configuration>
		        <protocArtifact>com.google.protobuf:protoc:3.5.1-1:exe:${os.detected.classifier}</protocArtifact>
		        <pluginId>grpc-java</pluginId>
		        <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.18.0:exe:${os.detected.classifier}</pluginArtifact>
		      </configuration>
		      <executions>
		        <execution>
		          <goals>
		            <goal>compile</goal>
		            <goal>compile-custom</goal>
		          </goals>
		        </execution>
		      </executions>
		    </plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-bom -->
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>aws-java-sdk-bom</artifactId>
				<version>1.11.488</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
		  <!-- Chronicle Queue for batching -->
		  <groupId>net.openhft</groupId>
		  <artifactId>chronicle-queue</artifactId>
		  <version>5.17.9</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.openhft</groupId>
			<artifactId>chronicle-map</artifactId>
			<version>3.17.0</version>
		</dependency>

		<dependency>
			<groupId>org.agrona</groupId>
			<artifactId>agrona</artifactId>
			<version>0.9.30</version>
		</dependency>

		<dependency>
			<groupId>org.apache.curator</groupId>
			<artifactId>curator-framework</artifactId>
			<version>4.1.0</version>
		</dependency>

		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
		</dependency>

		<dependency>
		  <groupId>io.grpc</groupId>
			<artifactId>grpc-netty-shaded</artifactId>
			<version>1.18.0</version>
		</dependency>
		<dependency>
		  <groupId>io.grpc</groupId>
		  <artifactId>grpc-protobuf</artifactId>
		  <version>1.18.0</version>
		</dependency>
		<dependency>
		  <groupId>io.grpc</groupId>
		  <artifactId>grpc-stub</artifactId>
		  <version>1.18.0</version>
		</dependency>

		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>3.6.1</version>
		</dependency>
	</dependencies>

</project>
